Implementacion base de datos y reajuste de tarifas, pagos y reservas en web, reservas y pagos a solucionar para poder reservar mas tiempo y aceptacion de pagos y reservas a tocar